--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,17 +47,17 @@ jobs:
 
       - name: Calculate environment variables
         run: |
-          echo "TAG_NAME=$(npm run calculate-tag-name --silent)" >> $GITHUB_ENV
+          echo "RELEASE_CHANNEL=$(npm run release-channel --silent)" >> $GITHUB_ENV
           echo "TAILWINDCSS_VERSION=$(node -e 'console.log(require(`./package.json`).version);')" >> $GITHUB_ENV
 
       - name: Publish
-        run: npm publish --tag ${{ env.TAG_NAME }}
+        run: npm publish --tag ${{ env.RELEASE_CHANNEL }}
         env:
           CI: true
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Trigger Tailwind Play update
-        if: env.TAG_NAME == 'latest'
+        if: env.RELEASE_CHANNEL == 'latest'
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.TAILWIND_PLAY_TOKEN }}
