decouple lint from test in workflows
Which means that we don't need to do the crazy linking in certain
workflows.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -48,9 +48,13 @@ jobs:
         env:
           CI: true
 
-      - name: Test
-        run: |
-          ln -nfs `pwd` node_modules/tailwindcss # So that Prettier can use the local version
-          npm test
+      - name: Lint
+        run: npm run style
         env:
           CI: true
+
+      - name: Test
+        run: npm test
+        env:
+          CI: true
+
