--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -40,21 +40,13 @@ jobs:
         env:
           CI: true
 
-      - name: Link and build Tailwind CSS
-        run: |
-          npm run swcify
-          ln -nfs `pwd` node_modules/tailwindcss
+      - name: Build Tailwind CSS
+        run: npm run swcify
         env:
           CI: true
 
       - name: Test
         run: npm test
-        env:
-          CI: true
-
-      - name: Unlink Tailwind CSS (for prettier)
-        run: |
-          unlink node_modules/tailwindcss
         env:
           CI: true
 
