--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "generate:types": "node -r @swc/register scripts/generate-types.js",
     "generate": "npm run generate:plugin-list && npm run generate:types",
     "release-channel": "node ./scripts/release-channel.js",
-    "release-notes": "node ./scripts/release-notes.js"
+    "release-notes": "node ./scripts/release-notes.js",
+    "oxide:install": "npm install --prefix ./oxide",
+    "oxide:dev": "concurrently -n tailwind,oxide-node -c green,yellow 'npm run swcify -- --watch' 'npm run --prefix ./oxide dev:node'",
+    "oxide:build": "npm run --prefix ./oxide build:node && npm run swcify"
   },
   "files": [
     "src/*",
@@ -48,6 +51,7 @@
     "@swc/jest": "^0.2.24",
     "@swc/register": "^0.1.10",
     "autoprefixer": "^10.4.13",
+    "concurrently": "^7.5.0",
     "cssnano": "^5.1.14",
     "esbuild": "^0.16.10",
     "eslint": "^8.30.0",
@@ -85,7 +89,8 @@
     "postcss-selector-parser": "^6.0.11",
     "postcss-value-parser": "^4.2.0",
     "quick-lru": "^5.1.1",
-    "resolve": "^1.22.1"
+    "resolve": "^1.22.1",
+    "tailwind-oxide": "file:oxide/crates/node"
   },
   "browserslist": [
     "> 1%",
