--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -75,7 +75,7 @@ jobs:
         run: npm run oxide:install
 
       - name: Build Tailwind CSS
-        run: npx turbo run oxide:build
+        run: npm run oxide:build
 
       - name: Use cached node_modules (integrations)
         id: cache-integrations
