--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -31,6 +31,7 @@ jobs:
           - webpack-4
           - webpack-5
         node-version: [16]
+        fail-fast: false
 
     steps:
       - uses: actions/checkout@v3
