--- a/.github/workflows/release-oxide.yml
+++ b/.github/workflows/release-oxide.yml
@@ -38,6 +38,9 @@ jobs:
           - os: ubuntu-latest
             target: aarch64-linux-android
             strip: ${ANDROID_NDK_LATEST_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-strip
+          - os: ubuntu-latest
+            target: armv7-linux-androideabi
+            strip: ${ANDROID_NDK_LATEST_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-strip
           # Linux
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
