--- a/oxide/crates/node/package.json
+++ b/oxide/crates/node/package.json
@@ -7,6 +7,7 @@
     "name": "tailwindcss-oxide",
     "triples": {
       "additional": [
+        "armv7-linux-androideabi",
         "aarch64-linux-android",
         "aarch64-apple-darwin",
         "aarch64-unknown-linux-gnu",
