--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,10 +114,6 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Setup cross compile toolchain
-        if: ${{ matrix.setup }}
-        run: ${{ matrix.setup }}
-
       - name: Install Rust (Stable)
         if: ${{ matrix.download }}
         run: |
@@ -130,7 +126,7 @@ jobs:
         run: pnpm install --ignore-scripts --filter=!./playgrounds/*
 
       - name: Build release
-        run: pnpm run build --filter ${{ env.OXIDE_LOCATION }}
+        run: pnpm run --filter ${{ env.OXIDE_LOCATION }} build
         env:
           RUST_TARGET: ${{ matrix.target }}
           JEMALLOC_SYS_WITH_LG_PAGE: ${{ matrix.page-size }}
@@ -195,7 +191,7 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.target }}-oxide-${{ hashFiles('./crates/**/*') }}
 
       - name: Install dependencies
-        run: pnpm install --ignore-scripts --filter=!./playgrounds/*
+        run: pnpm --filter=!./playgrounds/* install --ignore-scripts
 
       - name: Build Tailwind CSS
         run: pnpm run build
