--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -27,6 +27,10 @@
       "require": "./src/plugin.cts",
       "import": "./src/plugin.ts"
     },
+    "./colors": {
+      "require": "./src/colors.cts",
+      "import": "./src/colors.ts"
+    },
     "./package.json": "./package.json",
     "./index.css": "./index.css",
     "./index": "./index.css",
@@ -50,6 +54,10 @@
       "./plugin": {
         "require": "./dist/plugin.js",
         "import": "./src/plugin.mjs"
+      },
+      "./colors": {
+        "require": "./dist/colors.js",
+        "import": "./src/colors.mjs"
       },
       "./package.json": "./package.json",
       "./index.css": "./index.css",
