--- a/playgrounds/vite/package.json
+++ b/playgrounds/vite/package.json
@@ -9,6 +9,7 @@
     "preview": "bun --bun vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.14",
     "@tailwindcss/vite": "workspace:^",
     "@vitejs/plugin-react": "^4.3.1",
     "react": "^18.3.1",
