--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -27,6 +27,10 @@
       "require": "./src/compat/colors.cts",
       "import": "./src/compat/colors.ts"
     },
+    "./defaultTheme": {
+      "require": "./src/compat/default-theme.cts",
+      "import": "./src/compat/default-theme.ts"
+    },
     "./plugin": {
       "require": "./src/plugin.cts",
       "import": "./src/plugin.ts"
@@ -54,6 +58,10 @@
       "./plugin": {
         "require": "./dist/plugin.js",
         "import": "./dist/plugin.mjs"
+      },
+      "./defaultTheme": {
+        "require": "./dist/default-theme.js",
+        "import": "./dist/default-theme.mjs"
       },
       "./colors": {
         "require": "./dist/colors.js",
